--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "name": "Open index.html",
+            "url": "http://localhost:8080",
             "file": "/Users/cynthiairacheta/Documents/GitHub/Kayla-J.-Olivo/index.html"
         }
     ]
