--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "http://localhost:8080",
+            "name": "http://127.0.0.1:5500/",
             "file": "/Users/cynthiairacheta/Documents/GitHub/Kayla-J.-Olivo/index.html"
         }
     ]
